# StarkHeroAchievements

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  example.env  nginx.conf  pyproject.toml
ERC1155/: NFT_GUIDE.md  hardhat.config.ts  package-lock.json  package.json
ERC1155/contracts/: ERC1155.sol
ERC1155/ignition/deployments/chain-11155111/: deployed_addresses.json  journal.jsonl
ERC1155/ignition/modules/: ERC1155.ts
ERC1155/scripts/: addTokenTypes.js  completeSetup.js  deploy.js  mintAchievement.js
ERC1155/test/: MultiTypeNFT.ts
app/: .env.example  main.py
app/alembic/: env.py
app/alembic/versions/: 2025-05-30_3.py  2025-05-30_initial_commit.py  2025-05-31_.py  2025-05-31_1.py  2025-05-31_2.py
app/api/: router.py
app/api/endpoints/: auth.py  github.py  nft.py  user.py
app/core/: config.py  security.py
app/crud/: helpers.py
app/db/: __init__.py  models.py  session.py
app/models/: __init__.py  achievments.py  base.py  nfts.py  user.py
app/schemas/: achievement.py  nft.py  user.py
app/services/: auth.py  background.py  github.py  github_new.py  github_old.py  nft.py
app/tasks/: celery_worker.py
frontend_app/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend_app/src/: App.tsx  Dashboard.tsx  MetaMaskLogin.tsx  ProfileCard.tsx  index.css  main.tsx  nft_uploader.ts
frontend_app/src/components/: connectButtons.tsx  dashboard.tsx
frontend_app/src/context/: githubUserContext.tsx
frontend_app/src/services/: nftService.ts
vlayer/src/vlayer/: WebProofProver.sol
(+12 files in other folders)
